--- a/client/public/index.html
+++ b/client/public/index.html
@@ -74,6 +74,15 @@
               
               
   </body>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EX0L6TRDTC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EX0L6TRDTC');
+</script>
  <!-- <script  type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1e1ee60e9c85bc5a7b8065e6de5b66e3f9fc4338'></script>
     <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1016206/t/1"></script>
     -->
