--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EX0L6TRDTC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -9,7 +10,7 @@
 
   gtag('config', 'G-EX0L6TRDTC');
 </script>
-    <meta charset="utf-8" />
+    
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -33,7 +34,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<!-- <link rel="manifest" href="/site.webmanifest"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
